--- a/packages/front/modules/musics/playlists/SettingsButton.module.css
+++ b/packages/front/modules/musics/playlists/SettingsButton.module.css
@@ -1,11 +1,10 @@
 .controlButton {
   width: 0.5rem;
   height: 2.5rem;
-  padding: 0;
+  padding: 0 8px;
   background: none;
   margin: 0;
   border: none;
-  border-radius: 50%; /* Hace que sea un círculo perfecto */
   display: flex;
   align-items: center;
   justify-content: center;
