--- a/packages/front/modules/musics/playlists/list-selector/Item.module.css
+++ b/packages/front/modules/musics/playlists/list-selector/Item.module.css
@@ -1,21 +1,33 @@
 .item {
   user-select: none;
-  padding: 8px 12px;
-  display: flex;
-  flex-flow: column nowrap;
-  align-items: flex-start;
-  gap: 4px;
+  padding: 8px 0.5rem;
   border-radius: 4px;
+
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  gap: 1rem;
 
   &:hover {
     cursor: pointer;
     background-color: var(--color-gray-800);
   }
 
-  .name {
-    font-size: 1.25em;
+  section {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: flex-start;
+    gap: 0.25rem;
+
+    .name {
+      font-size: 1.25em;
+    }
+    .length {
+      font-size: 0.75em;
+    }
   }
-  .length {
-    font-size: 0.75em;
-  }
+}
+
+.cover {
+  --size: 2.75rem;
 }
