--- a/packages/front/modules/ui-kit/upload/YouTubeUpload.module.css
+++ b/packages/front/modules/ui-kit/upload/YouTubeUpload.module.css
@@ -105,22 +105,19 @@
     0 4px 6px -2px rgba(239, 68, 68, 0.05);
 }
 .actions {
-  --width: 2rem;
+  --width: 3rem;
   width: var(--width);
   height: var(--width);
   display: flex;
   align-items: center;
   justify-content: center;
 
+  --spinner-size: calc(var(--width) * 0.8);
+  --spinner-width: 3px;
+
   .uploadButton {
     width: var(--width) !important;
     height: var(--width) !important;
-  }
-
-  .loading > * {
-    --spinner-size: var(--width) !important;
-    --spinner-width: 0.125rem !important;
-    margin: 0;
   }
 }
 
@@ -142,5 +139,10 @@
     padding-right: 1rem;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
+  }
+
+  .actions {
+    --width: 2rem;
+    --spinner-width: 2px;
   }
 }
