--- a/packages/front/modules/musics/playlists/Playlist.module.css
+++ b/packages/front/modules/musics/playlists/Playlist.module.css
@@ -112,18 +112,25 @@
   background-color: var(--color-green-600);
 }
 
-.playlistContent {
-  padding: 24px 0;
+.playlistItems {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
   .tracksHeader {
     --height: 1.25rem;
     display: flex;
-    align-items: center;
-    padding: 0 12px 8px;
+    flex-flow: row nowrap;
+    border-radius: 0;
+    padding-bottom: 0.5rem;
     border-bottom: 1px solid var(--color-gray-500);
-    margin-bottom: 8px;
+    margin-bottom: 0.25rem;
     font-size: var(--height);
     color: var(--color-gray-100);
     font-weight: 500;
+
+    &:hover,
+    &:active {
+      background: inherit;
+    }
 
     user-select: none;
 
@@ -134,33 +141,12 @@
   }
 
   .headerIndex {
-    width: 32px;
-    margin-right: 1rem;
     text-align: center;
   }
 
   .headerTitle {
     flex: 1;
     min-width: 0;
-  }
-
-  .headerDuration {
-    width: 32px;
-    margin-right: 1rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .headerActions {
-    width: 56px;
-    margin-right: 0.5rem;
-  }
-
-  .tracksList {
-    display: flex;
-    flex-direction: column;
-    gap: 4px;
   }
 
   .emptyState {
@@ -234,13 +220,7 @@
     margin-top: 1rem;
   }
 
-  .playlistItem {
-    padding: 0.25rem 0;
-  }
-
   .tracksHeader {
-    padding-left: 0 !important;
-    padding-right: 0 !important;
     --height: 1rem !important;
   }
 
@@ -260,6 +240,53 @@
   }
 }
 
-.isDragging {
+.sortableItemWrapper {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  touch-action: none; /* Importante para evitar scroll al arrastrar en móvil */
+}
+
+.dragHandle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-self: stretch;
+  width: var(--drag-width);
+  opacity: 0.7;
+
+  &:active {
+    cursor: grabbing;
+  }
+}
+
+.dragHandle:hover {
+  cursor: grab;
+}
+
+.isDraggingGlobal :not(:has(.isDragging)) {
+  pointer-events: none;
+}
+
+.isDraggingGlobal,
+.isDraggingGlobal .dragHandle:hover {
   cursor: grabbing;
+}
+
+.dragHandle:hover,
+.isDragging.dragHandle {
+  opacity: 1;
+  color: white !important;
+}
+
+.draggable {
+  --drag-width: 2.5rem;
+
+  @media (width < 500px) {
+    --drag-width: 1.5rem;
+  }
+}
+
+.draggable .tracksHeader .headerDrag {
+  width: var(--drag-width);
 }
