--- a/packages/front/modules/musics/playlists/Playlist.module.css
+++ b/packages/front/modules/musics/playlists/Playlist.module.css
@@ -126,6 +126,7 @@
     font-size: var(--height);
     color: var(--color-gray-100);
     font-weight: 500;
+    user-select: none;
 
     &:hover,
     &:active {
@@ -244,10 +245,10 @@
   display: flex;
   align-items: center;
   width: 100%;
-  touch-action: none; /* Importante para evitar scroll al arrastrar en móvil */
 }
 
 .dragHandle {
+  touch-action: none; /* Importante para evitar scroll al arrastrar en móvil */
   display: flex;
   align-items: center;
   justify-content: center;
