--- a/packages/front/modules/resources/ListEntry.module.css
+++ b/packages/front/modules/resources/ListEntry.module.css
@@ -9,14 +9,24 @@
   }
 }
 
-.leftDiv {
-  width: 32px;
+* + .leftDiv,
+* + .noLeftDiv {
+  margin-left: 1rem;
+}
+
+.leftDiv,
+.noLeftDiv {
   margin-right: 1rem;
-  user-select: none;
 
   @media (width < 500px) {
     margin-right: 0.5rem;
+    margin-left: 0.5rem;
   }
+}
+
+.leftDiv {
+  width: 40px;
+  user-select: none;
 }
 
 .container {
@@ -37,13 +47,22 @@
     padding-bottom: 0.25rem;
   }
 
-  &:hover {
+  &.dragging {
+    pointer-events: none;
+  }
+
+  &:hover,
+  &.dragging {
     background-color: var(--color-gray-800);
   }
 
   &.playing {
     background-color: var(--color-gray-900);
-    border-left: 4px solid var(--color-playing);
+    box-shadow: inset 4px 0 0 0 var(--color-playing);
+  }
+
+  *:has(> .cover) {
+    --size: 40px;
   }
 
   .right {
@@ -111,18 +130,6 @@
         color: var(--color-playing);
       }
     }
-
-    .subtitle {
-      font-size: 14px;
-      display: flex;
-      justify-content: start;
-      width: 100%;
-
-      .separator {
-        white-space: pre; /* Evita que colapse */
-        margin: 0 5px;
-      }
-    }
   }
 
   .main.noLeftDiv {
@@ -130,53 +137,28 @@
       margin-left: 1rem;
     }
   }
+}
 
-  .indexNumber {
-    font-size: 14px;
-    font-weight: 500;
+.rows {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: flex-start;
+  justify-content: center;
+
+  > * {
     display: flex;
-    justify-content: center;
-  }
-
-  .rows {
-    display: flex;
-    flex-flow: column nowrap;
-    align-items: flex-start;
-    justify-content: center;
-
-    > * {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-  }
-
-  .columns {
-    display: flex;
-    flex-flow: row nowrap;
     align-items: center;
-
-    button:hover {
-      background-color: transparent !important;
-    }
+    justify-content: center;
   }
 }
 
-.playButton {
-  width: 32px;
-  height: 32px;
-  border-radius: 50%;
-  background-color: var(--color-playing);
-  color: white;
-  border: none;
+.columns {
   display: flex;
+  flex-flow: row nowrap;
   align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  transition: all 0.2s ease;
 
-  &:hover {
-    background-color: var(--color-playing-hover);
+  button:hover {
+    background-color: transparent !important;
   }
 }
 
@@ -185,5 +167,49 @@
 
   @media (width < 450px) {
     margin-right: 0.5rem;
+  }
+}
+
+.playButton {
+  opacity: 0 !important;
+  position: absolute;
+  top: 0;
+
+  width: var(--size) !important;
+  height: var(--size) !important;
+}
+
+*:has(> .playButton) {
+  position: relative;
+}
+
+.container:hover .playButton,
+.container.playing .playButton {
+  opacity: 1 !important;
+}
+
+.cover {
+  background-color: var(--color-gray-900);
+  transition: all 0.2s;
+}
+
+.container:hover:has(.playButton) .cover,
+.container.playing:has(.playButton) .cover {
+  filter: brightness(0.5);
+}
+
+*:has(> .cover):hover .cover {
+  filter: brightness(0.25) !important;
+}
+
+.subtitle {
+  font-size: 14px;
+  display: flex;
+  justify-content: start;
+  width: 100%;
+
+  .separator {
+    white-space: pre; /* Evita que colapse */
+    margin: 0 5px;
   }
 }
