--- a/packages/front/modules/player/browser/MediaPlayer/Fullscreen/FullscreenMediaPlayer.module.css
+++ b/packages/front/modules/player/browser/MediaPlayer/Fullscreen/FullscreenMediaPlayer.module.css
@@ -1,37 +1,3 @@
-html:has(.container:not(.closed)) {
-  overflow: hidden;
-}
-
-.container {
-  --z-index: 210;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100dvw;
-  height: 100dvh;
-  background: linear-gradient(
-    var(--color-gray-900),
-    var(--color-gray-975) 61.8%
-  );
-  color: var(--color-gray-400);
-  z-index: var(--z-index);
-
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: space-between;
-  padding: 1.5rem;
-
-  transition: transform 0.2s;
-
-  @starting-style {
-    transform: translateY(100%);
-  }
-
-  &.closed {
-    transform: translateY(100%);
-  }
-}
-
 .closeButton {
   --padding: 0rem;
 }
@@ -54,6 +20,12 @@ html:has(.container:not(.closed)) {
 .footer {
   margin-top: 1rem;
   justify-content: space-between;
+
+  > aside {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+  }
 }
 
 .playQueueWrapper {
@@ -64,10 +36,28 @@ html:has(.container:not(.closed)) {
     height: 100%;
     overflow-y: auto;
   }
+}
 
-  .playQueueTitle {
-    margin-top: 0;
-    text-align: center;
-    color: var(--color-gray-25);
-  }
+.activeViewButton {
+  cursor: default !important;
+}
+
+*:has(> .activeViewButton) {
+  position: relative;
+  display: flex;
+  flex-flow: column nowrap;
+}
+
+.underline {
+  position: absolute;
+  height: 0.25rem;
+  bottom: -0.25rem;
+  width: 100%;
+  background-color: var(--color-blue);
+}
+
+.title {
+  margin-top: 0;
+  text-align: center;
+  color: var(--color-gray-25);
 }
