fix(front): effects button and window

--- a/packages/front/modules/player/browser/MediaPlayer/Bottom/MediaPlayer.module.css
+++ b/packages/front/modules/player/browser/MediaPlayer/Bottom/MediaPlayer.module.css
@@ -155,3 +155,15 @@
     position: relative;
   }
 }
+
+.effectsWindow {
+  .wrapper {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+
+    > * {
+      max-width: 30rem;
+    }
+  }
+}
