--- a/packages/front/app/musics/search/page.module.css
+++ b/packages/front/app/musics/search/page.module.css
@@ -1,19 +1,3 @@
-.topbar {
-  display: flex;
-  flex-flow: row;
-  gap: 1rem;
-  height: 1.5rem;
-  margin: 0 1rem;
-  align-items: center;
-
-  > * {
-    height: 100% !important;
-  }
-}
-
-.searchButton {
-  flex: 1;
-  font-size: 0.9rem !important;
-  font-weight: 400 !important;
-  padding: 0.7rem !important;
+.marginTop {
+  margin-top: 1rem;
 }
