--- a/packages/front/modules/player/browser/MediaPlayer/PlayButtonView.module.css
+++ b/packages/front/modules/player/browser/MediaPlayer/PlayButtonView.module.css
@@ -44,11 +44,11 @@
 
 .playButton.themeBlue {
   color: var(--color-gray-150);
-  background-color: var(--color-playing);
+  background-color: var(--color-blue-400);
 
   &:hover {
     color: var(--color-gray-300);
-    background-color: var(--color-playing-hover);
+    background-color: var(--color-blue-500);
   }
 }
 
