--- a/packages/front/modules/player/browser/MediaPlayer/Bottom/MediaPlayer.module.css
+++ b/packages/front/modules/player/browser/MediaPlayer/Bottom/MediaPlayer.module.css
@@ -12,7 +12,8 @@
   background-color: var(--background-color);
   color: var(--color-gray-400);
   z-index: 200;
-  padding: 0 1rem;
+  padding: 0;
+  padding-left: 1rem;
   box-shadow: 0 -4px 6px -1px rgba(0, 0, 0, 0.1);
 
   --button-size: 2rem;
@@ -62,16 +63,11 @@
       font-size: inherit;
     }
   }
-
-  .timeLabel {
-    font-size: 0.9rem;
-    white-space: nowrap;
-    margin-right: 1rem;
-
-    @media (width < 900px) {
-      display: none;
-    }
-  }
+}
+.timeLabel {
+  font-size: 0.9rem;
+  white-space: nowrap;
+  margin-right: 1rem;
 }
 
 .controlsSection {
@@ -79,7 +75,6 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  gap: 1rem;
 }
 
 .extraControls {
@@ -94,6 +89,14 @@
   top: calc(-1 * var(--clickacle-height) / 2);
   left: 0;
   z-index: 200;
+}
+
+.progressBarFooter {
+  display: flex;
+  flex: 1;
+  justify-content: flex-start;
+  padding-left: 1rem;
+  gap: 0.5rem;
 }
 
 @media (width < 600px) {
@@ -169,4 +172,24 @@
       max-width: 30rem;
     }
   }
+}
+
+.closeButton {
+  --button-size: 0.8em;
+  margin-right: 0.5rem;
+  align-self: flex-start;
+  margin-top: 0.67rem;
+}
+
+.backwardButton,
+.forwardButton {
+  --button-size: 0.8em;
+}
+
+.nextButton {
+  margin-left: 0.5rem;
+}
+
+.previousButton {
+  margin-right: 0.5rem;
 }
