--- a/packages/front/modules/image-covers/Selector/Selector.module.css
+++ b/packages/front/modules/image-covers/Selector/Selector.module.css
@@ -6,18 +6,6 @@
   min-height: 0;
 }
 
-.searchSection {
-  display: flex;
-  gap: 8px;
-
-  input {
-    flex: 1;
-    padding: 0.25rem 0.5rem;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-}
-
 .resultsInfo {
   font-size: 12px;
   color: var(--color-gray-400);
@@ -49,15 +37,18 @@
     border-color: var(--color-blue-600);
   }
 
-  .coverImage,
+  *:has(> .coverImage),
   .coverLabel {
     width: 200px;
   }
 
-  .coverImage {
+  *:has(> .coverImage) {
+    max-width: 200px;
+    min-width: 100px;
     height: 200px;
     object-fit: cover;
     border-radius: 4px;
+    aspect-ratio: 1 / 1;
   }
 
   .coverLabel {
@@ -77,37 +68,74 @@
   margin-top: 8px;
 }
 
-.currentCoverSection {
-  --size: 150px;
-
-  display: flex;
-  flex-flow: column nowrap;
-  gap: 0.5rem;
-}
-
 .header {
   display: flex;
-  flex-flow: row nowrap;
-  justify-content: flex-start;
-  align-items: center;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: flex-end;
   gap: 2rem;
+
+  .currentCoverSection {
+    --size: 150px;
+
+    display: flex;
+    flex-flow: column nowrap;
+    gap: 0.5rem;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .searchAside {
+    display: flex;
+    flex-flow: column nowrap;
+    gap: 1rem;
+    align-items: flex-start;
+    justify-content: center;
+    flex: 1;
+
+    .newImageButton {
+      padding: 0.25rem 0.5rem;
+      font-size: 0.8rem;
+
+      > section:first-child {
+        margin-top: 2px;
+        margin-right: 0.25rem;
+      }
+
+      svg {
+        width: 1.25rem;
+        height: 1.25rem;
+      }
+    }
+
+    .searchSection {
+      max-width: 500px;
+      min-width: 150px;
+      width: 100%;
+    }
+  }
 }
 
-@media (width < 400px) {
-  .currentCoverSection {
-    --size: 100px;
+@media (width < 500px) {
+  .header {
+    gap: 1rem;
+
+    .currentCoverSection {
+      --size: 100px !important;
+    }
   }
 
   .resultItem {
     width: 100% !important;
     align-items: center;
+    max-width: 250px;
 
-    .coverImage,
+    *:has(> .coverImage),
     .coverLabel {
       width: 100% !important;
     }
 
-    .coverImage {
+    *:has(> .coverImage) {
       height: auto !important;
     }
   }
