--- a/packages/front/modules/ui-kit/spinner/fetching.style.module.css
+++ b/packages/front/modules/ui-kit/spinner/fetching.style.module.css
@@ -20,11 +20,13 @@
 main:has(> .loading) {
   min-height: inherit;
   position: relative;
+  width: 100%;
+  min-height: calc(100dvh - var(--content-margin-top));
+  justify-content: center;
+  align-items: center;
 
   .loading {
     position: absolute;
-    width: 100%;
-    height: 100%;
 
     display: flex;
     justify-content: center;
