fix: minor style changes

--- a/packages/front/modules/musics/playlists/list/Item.module.css
+++ b/packages/front/modules/musics/playlists/list/Item.module.css
@@ -21,8 +21,8 @@
 
   &:hover,
   &:focus {
-    text-decoration: inherit;
-    color: inherit;
+    text-decoration: inherit !important;
+    color: inherit !important;
   }
 }
 
