--- a/packages/front/app/PageContainer.module.css
+++ b/packages/front/app/PageContainer.module.css
@@ -12,6 +12,7 @@
 .container > main {
   width: 100%;
   height: 100%;
+  min-height: calc(100dvh - var(--content-margin-top));
   max-width: 800px;
   display: flex;
   flex-flow: column nowrap;
