--- a/packages/front/modules/ui-kit/input/Button.module.css
+++ b/packages/front/modules/ui-kit/input/Button.module.css
@@ -47,6 +47,10 @@ body:has(.button) {
     cursor: pointer;
   }
 
+  &.isSubmitting {
+    cursor: progress;
+  }
+
   .left {
     margin-right: 0.5rem;
   }
