--- a/packages/front/modules/image-covers/Selector/Button.module.css
+++ b/packages/front/modules/image-covers/Selector/Button.module.css
@@ -6,6 +6,8 @@
   gap: 1rem;
   align-items: center;
   font-size: 0.8em;
+  margin-top: 0.5rem;
+
   &:hover {
     cursor: pointer;
     filter: brightness(0.5);
