--- a/packages/front/modules/musics/playlists/list/List.module.css
+++ b/packages/front/modules/musics/playlists/list/List.module.css
@@ -1,11 +1,12 @@
-.contextMenu {
-  p:hover {
-    cursor: pointer;
-  }
-}
-
-.list {
+.noPlaylists {
   display: flex;
-  flex-direction: column;
-  gap: 1rem;
+  flex-flow: column nowrap;
+  justify-content: center;
+
+  p {
+    text-align: center;
+  }
+  button {
+    width: auto;
+  }
 }
