--- a/packages/front/modules/resources/List.module.css
+++ b/packages/front/modules/resources/List.module.css
@@ -1,7 +1,8 @@
 .list {
   display: flex;
   flex-flow: column nowrap;
-  gap: 4px;
+  gap: 0.25rem;
+  margin: 1rem 0;
 
   h3 {
     font-size: 1.5rem !important;
