--- a/packages/front/modules/resources/ListItem/ListItem.module.css
+++ b/packages/front/modules/resources/ListItem/ListItem.module.css
@@ -10,8 +10,8 @@
 }
 
 .container a {
-  text-decoration: none;
-  color: inherit;
+  text-decoration: none !important;
+  color: inherit !important;
 }
 
 * + .leftDiv,
