fix(front): merge buttons in context menu

--- a/packages/front/app/musics/playlists/styles.module.css
+++ b/packages/front/app/musics/playlists/styles.module.css
@@ -1,12 +1,14 @@
-.newPlaylistSection {
+.header {
   display: flex;
   flex-flow: row nowrap;
   gap: 2rem;
   justify-content: right;
+
+  @media(width < 500px) {
+    gap: 0.5rem;
+  }
 }
 
-.header {
-  margin-top: 1rem;
-  display: flex;
-  justify-content: space-between;
+*:has(>.header) {
+  padding-top: 1rem;
 }
